--- a/lesson_9/index.html
+++ b/lesson_9/index.html
@@ -28,11 +28,11 @@
                             <a class="btn__header-item raise" href="#block-4">
                                 Block 4
                             </a>
-                            <a class="btn__header-item offset" href="#game">
-                                Game
-                            </a>
                             <a class="btn__header-item up" href="#practice">
                                 practice
+                            </a>
+                            <a class="btn__header-item offset" href="#game">
+                                Game
                             </a>
                         </div>
                     </div>
@@ -206,7 +206,11 @@
                             </h2>
                             <div class="fourth__product product-fourth">
                                 <div class="product-left">
-                                    <div class="product-wrap__img"><img src="img/block-4_1.png" alt="ring" /></div>
+                                    <div class="product-wrap__img">
+                                        <img
+                                            src="img/block-4_1.png"
+                                            alt="ring" />
+                                    </div>
                                     <h5 class="product-left__name">
                                         Embossed hoop earrings
                                     </h5>
@@ -219,7 +223,11 @@
                                         <span>#02</span>
                                         new jewellery collection
                                     </a>
-                                    <div class="product-wrap__img"><img src="img/block-4_2.png" alt="ring" /></div>
+                                    <div class="product-wrap__img">
+                                        <img
+                                            src="img/block-4_2.png"
+                                            alt="ring" />
+                                    </div>
                                     <a href="#" class="product-right__name">
                                         Embossed hoop earrings
                                     </a>
@@ -230,7 +238,93 @@
                             </div>
                         </div>
                     </section>
+                    <section class="practice" id="practice">
+                        <h2 class="practice__title">
+                            Розуміння псевдоелемента :before and :after
+                        </h2>
+                        <div class="practice__text">
+                            <p>
+                                <a href="#visited" class="practice__visited">
+                                    Visited
+                                </a>
+                                &lt;- це
+                                <span>:before</span>
+                                . Якщо колір посилання
+                                <span>Visited</span>
+                                змінився, значить ти вже
+                                на нього клацав. A це
+                                <span>:after</span>
+                                -&gt;
+                            </p>
+                            <p>
+                                <a href="#visited-2" class="practice__visited">
+                                    Visited
+                                </a>
+                                &lt;- це
+                                <span>:before</span>
+                                . Якщо колір посилання
+                                <span>Visited</span>
+                                змінився, значить ти вже
+                                на нього клацав. A це
+                                <span>:after</span>
+                                -&gt;
+                            </p>
+                            <p>
+                                <a href="#visited-3" class="practice__visited">
+                                    Visited
+                                </a>
+                                &lt;- це
+                                <span>:before</span>
+                                . Якщо колір посилання
+                                <span>Visited</span>
+                                змінився, значить ти вже
+                                на нього клацав. A це
+                                <span>:after</span>
+                                -&gt;
+                            </p>
+                            <p>
+                                <a href="#visited-4" class="practice__visited">
+                                    Visited
+                                </a>
+                                &lt;- це
+                                <span>:before</span>
+                                . Якщо колір посилання
+                                <span>Visited</span>
+                                змінився, значить ти вже
+                                на нього клацав. A це
+                                <span>:after</span>
+                                -&gt;
+                            </p>
+                            <p>
+                                <a href="#visited-5" class="practice__visited">
+                                    Visited
+                                </a>
+                                &lt;- це
+                                <span>:before</span>
+                                . Якщо колір посилання
+                                <span>Visited</span>
+                                змінився, значить ти вже
+                                на нього клацав. A це
+                                <span>:after</span>
+                                -&gt;
+                            </p>
+                            <p>
+                                <a href="#visited-6" class="practice__visited">
+                                    Visited
+                                </a>
+                                &lt;- це
+                                <span>:before</span>
+                                . Якщо колір посилання
+                                <span>Visited</span>
+                                змінився, значить ти вже
+                                на нього клацав. A це
+                                <span>:after</span>
+                                -&gt;
+                            </p>
+                        </div>
+                    </section>
                     <section class="game" id="game">
+                        <h1 class="game__title">Shall we play?</h1>
                         <div class="game__wrapper">
                             <div class="game__body">
                                 <div class="game__start line"></div>
@@ -251,10 +345,23 @@
                                 <div class="game__item-15 line"></div>
                                 <div class="game__item-16 line"></div>
                                 <div class="game__item-17 line"></div>
-                                
                             </div>
                         </div>
                     </section>
+                    <div
+                        class="block-visited visited visited-2"
+                        id="visited" id="visited-2">
+                        <h2 class="block-visited__title">
+                            Якщо ти тут, значить ти клікнув по посиланню, колір
+                            якого тепер змінився назавжди.
+                        </h2>
+                        <div class="block-visited__text">
+                            <p>
+                                щоб повернутись назад треба клікнути
+                                <a href="#practice">сюди</a>
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </main>
             <footer>
