--- a/lesson_9/index.html
+++ b/lesson_9/index.html
@@ -244,80 +244,74 @@
                         </h2>
                         <div class="practice__text">
                             <p>
-                                <a href="#visited" class="practice__visited">
-                                    Visited
-                                </a>
                                 &lt;- це
                                 <span>:before</span>
+                                <a href="#visited-1" class="practice__visited">
+                                    Visited
+                                </a>
                                 . Якщо колір посилання
                                 <span>Visited</span>
-                                змінився, значить ти вже
-                                на нього клацав. A це
+                                змінився, значить ти вже на нього клацав. A це
                                 <span>:after</span>
                                 -&gt;
                             </p>
                             <p>
+                                &lt;- це
+                                <span>:before</span>
                                 <a href="#visited-2" class="practice__visited">
                                     Visited
                                 </a>
-                                &lt;- це
-                                <span>:before</span>
                                 . Якщо колір посилання
                                 <span>Visited</span>
-                                змінився, значить ти вже
-                                на нього клацав. A це
+                                змінився, значить ти вже на нього клацав. A це
                                 <span>:after</span>
                                 -&gt;
                             </p>
                             <p>
+                                &lt;- це
+                                <span>:before</span>
                                 <a href="#visited-3" class="practice__visited">
                                     Visited
                                 </a>
-                                &lt;- це
-                                <span>:before</span>
                                 . Якщо колір посилання
                                 <span>Visited</span>
-                                змінився, значить ти вже
-                                на нього клацав. A це
+                                змінився, значить ти вже на нього клацав. A це
                                 <span>:after</span>
                                 -&gt;
                             </p>
                             <p>
+                                &lt;- це
+                                <span>:before</span>
                                 <a href="#visited-4" class="practice__visited">
                                     Visited
                                 </a>
-                                &lt;- це
-                                <span>:before</span>
                                 . Якщо колір посилання
                                 <span>Visited</span>
-                                змінився, значить ти вже
-                                на нього клацав. A це
+                                змінився, значить ти вже на нього клацав. A це
                                 <span>:after</span>
                                 -&gt;
                             </p>
                             <p>
+                                &lt;- це
+                                <span>:before</span>
                                 <a href="#visited-5" class="practice__visited">
                                     Visited
                                 </a>
-                                &lt;- це
-                                <span>:before</span>
                                 . Якщо колір посилання
                                 <span>Visited</span>
-                                змінився, значить ти вже
-                                на нього клацав. A це
+                                змінився, значить ти вже на нього клацав. A це
                                 <span>:after</span>
                                 -&gt;
                             </p>
                             <p>
+                                &lt;- це
+                                <span>:before</span>
                                 <a href="#visited-6" class="practice__visited">
                                     Visited
                                 </a>
-                                &lt;- це
-                                <span>:before</span>
                                 . Якщо колір посилання
                                 <span>Visited</span>
-                                змінився, значить ти вже
-                                на нього клацав. A це
+                                змінився, значить ти вже на нього клацав. A це
                                 <span>:after</span>
                                 -&gt;
                             </p>
@@ -348,9 +342,67 @@
                             </div>
                         </div>
                     </section>
-                    <div
-                        class="block-visited visited visited-2"
-                        id="visited" id="visited-2">
+                    <div class="block-visited visited" id="visited-1">
+                        <h2 class="block-visited__title">
+                            Якщо ти тут, значить ти клікнув по посиланню, колір
+                            якого тепер змінився назавжди.
+                        </h2>
+                        <div class="block-visited__text">
+                            <p>
+                                щоб повернутись назад треба клікнути
+                                <a href="#practice">сюди</a>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="block-visited visited" id="visited-2">
+                        <h2 class="block-visited__title">
+                            Якщо ти тут, значить ти клікнув по посиланню, колір
+                            якого тепер змінився назавжди.
+                        </h2>
+                        <div class="block-visited__text">
+                            <p>
+                                щоб повернутись назад треба клікнути
+                                <a href="#practice">сюди</a>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="block-visited visited" id="visited-3">
+                        <h2 class="block-visited__title">
+                            Якщо ти тут, значить ти клікнув по посиланню, колір
+                            якого тепер змінився назавжди.
+                        </h2>
+                        <div class="block-visited__text">
+                            <p>
+                                щоб повернутись назад треба клікнути
+                                <a href="#practice">сюди</a>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="block-visited visited" id="visited-4">
+                        <h2 class="block-visited__title">
+                            Якщо ти тут, значить ти клікнув по посиланню, колір
+                            якого тепер змінився назавжди.
+                        </h2>
+                        <div class="block-visited__text">
+                            <p>
+                                щоб повернутись назад треба клікнути
+                                <a href="#practice">сюди</a>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="block-visited visited" id="visited-5">
+                        <h2 class="block-visited__title">
+                            Якщо ти тут, значить ти клікнув по посиланню, колір
+                            якого тепер змінився назавжди.
+                        </h2>
+                        <div class="block-visited__text">
+                            <p>
+                                щоб повернутись назад треба клікнути
+                                <a href="#practice">сюди</a>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="block-visited visited" id="visited-6">
                         <h2 class="block-visited__title">
                             Якщо ти тут, значить ти клікнув по посиланню, колір
                             якого тепер змінився назавжди.
