--- a/lesson_9/index.html
+++ b/lesson_9/index.html
@@ -211,9 +211,9 @@
                                             src="img/block-4_1.png"
                                             alt="ring" />
                                     </div>
-                                    <h5 class="product-left__name">
+                                    <a href="#" class="product-left__name">
                                         Embossed hoop earrings
-                                    </h5>
+                                    </a>
                                     <div class="product-left__price">
                                         $144.00
                                     </div>
