--- a/lesson_9/index.html
+++ b/lesson_9/index.html
@@ -240,7 +240,7 @@
                     </section>
                     <section class="practice" id="practice">
                         <h2 class="practice__title">
-                            Розуміння псевдоелемента :before and :after
+                            Розуміння псевдоелементів
                         </h2>
                         <div class="practice__text">
                             <p>
@@ -342,76 +342,78 @@
                             </div>
                         </div>
                     </section>
-                    <div class="block-visited visited" id="visited-1">
-                        <h2 class="block-visited__title">
-                            Якщо ти тут, значить ти клікнув по посиланню, колір
-                            якого тепер змінився назавжди.
-                        </h2>
-                        <div class="block-visited__text">
-                            <p>
-                                щоб повернутись назад треба клікнути
-                                <a href="#practice">сюди</a>
-                            </p>
+                    <div class="block-visited__wraper">
+                        <div class="block-visited visited" id="visited-1">
+                            <h2 class="block-visited__title">
+                                Якщо ти тут, значить ти клікнув по посиланню,
+                                колір якого тепер змінився назавжди.
+                            </h2>
+                            <div class="block-visited__text">
+                                <p>
+                                    щоб повернутись назад треба клікнути
+                                    <a href="#practice">сюди</a>
+                                </p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="block-visited visited" id="visited-2">
-                        <h2 class="block-visited__title">
-                            Якщо ти тут, значить ти клікнув по посиланню, колір
-                            якого тепер змінився назавжди.
-                        </h2>
-                        <div class="block-visited__text">
-                            <p>
-                                щоб повернутись назад треба клікнути
-                                <a href="#practice">сюди</a>
-                            </p>
+                        <div class="block-visited visited" id="visited-2">
+                            <h2 class="block-visited__title">
+                                Якщо ти тут, значить ти клікнув по посиланню,
+                                колір якого тепер змінився назавжди.
+                            </h2>
+                            <div class="block-visited__text">
+                                <p>
+                                    щоб повернутись назад треба клікнути
+                                    <a href="#practice">сюди</a>
+                                </p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="block-visited visited" id="visited-3">
-                        <h2 class="block-visited__title">
-                            Якщо ти тут, значить ти клікнув по посиланню, колір
-                            якого тепер змінився назавжди.
-                        </h2>
-                        <div class="block-visited__text">
-                            <p>
-                                щоб повернутись назад треба клікнути
-                                <a href="#practice">сюди</a>
-                            </p>
+                        <div class="block-visited visited" id="visited-3">
+                            <h2 class="block-visited__title">
+                                Якщо ти тут, значить ти клікнув по посиланню,
+                                колір якого тепер змінився назавжди.
+                            </h2>
+                            <div class="block-visited__text">
+                                <p>
+                                    щоб повернутись назад треба клікнути
+                                    <a href="#practice">сюди</a>
+                                </p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="block-visited visited" id="visited-4">
-                        <h2 class="block-visited__title">
-                            Якщо ти тут, значить ти клікнув по посиланню, колір
-                            якого тепер змінився назавжди.
-                        </h2>
-                        <div class="block-visited__text">
-                            <p>
-                                щоб повернутись назад треба клікнути
-                                <a href="#practice">сюди</a>
-                            </p>
+                        <div class="block-visited visited" id="visited-4">
+                            <h2 class="block-visited__title">
+                                Якщо ти тут, значить ти клікнув по посиланню,
+                                колір якого тепер змінився назавжди.
+                            </h2>
+                            <div class="block-visited__text">
+                                <p>
+                                    щоб повернутись назад треба клікнути
+                                    <a href="#practice">сюди</a>
+                                </p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="block-visited visited" id="visited-5">
-                        <h2 class="block-visited__title">
-                            Якщо ти тут, значить ти клікнув по посиланню, колір
-                            якого тепер змінився назавжди.
-                        </h2>
-                        <div class="block-visited__text">
-                            <p>
-                                щоб повернутись назад треба клікнути
-                                <a href="#practice">сюди</a>
-                            </p>
+                        <div class="block-visited visited" id="visited-5">
+                            <h2 class="block-visited__title">
+                                Якщо ти тут, значить ти клікнув по посиланню,
+                                колір якого тепер змінився назавжди.
+                            </h2>
+                            <div class="block-visited__text">
+                                <p>
+                                    щоб повернутись назад треба клікнути
+                                    <a href="#practice">сюди</a>
+                                </p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="block-visited visited" id="visited-6">
-                        <h2 class="block-visited__title">
-                            Якщо ти тут, значить ти клікнув по посиланню, колір
-                            якого тепер змінився назавжди.
-                        </h2>
-                        <div class="block-visited__text">
-                            <p>
-                                щоб повернутись назад треба клікнути
-                                <a href="#practice">сюди</a>
-                            </p>
+                        <div class="block-visited visited" id="visited-6">
+                            <h2 class="block-visited__title">
+                                Якщо ти тут, значить ти клікнув по посиланню,
+                                колір якого тепер змінився назавжди.
+                            </h2>
+                            <div class="block-visited__text">
+                                <p>
+                                    щоб повернутись назад треба клікнути
+                                    <a href="#practice">сюди</a>
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
