--- a/lesson_9/index.html
+++ b/lesson_9/index.html
@@ -156,7 +156,7 @@
                                 </div>
                             </li>
                         </ul>
-                        <button class="second__btn">More About Us</button>
+                        <a href="#" class="second__btn">More About Us</a>
                     </section>
                     <section class="third block-3" id="block-3">
                         <div class="third__info">
