added name icons

--- a/lesson_10/index.html
+++ b/lesson_10/index.html
@@ -89,11 +89,11 @@
                     </p>
                     <p>
                         <img src="img/main/icons/list.svg" alt="list" />
-                        іконка, вектор, svg
+                        контент, вектор, svg
                     </p>
                     <p>
                         <img src="img/main/icons/reward.svg" alt="Logo" />
-                        іконка, вектор, svg
+                        контент, вектор, svg
                     </p>
 
                     <p>
@@ -120,23 +120,23 @@
 
                     <p>
                         <img src="img/main/services/01.svg" alt="Icon" />
-                        іконка, вектор, svg
+                        контент-іконка, вектор, svg
                     </p>
                     <p>
                         <img src="img/main/services/02.svg" alt="Icon" />
-                        іконка, вектор, svg
+                        контент-іконка, вектор, svg
                     </p>
                     <p>
                         <img src="img/main/services/03.svg" alt="Icon" />
-                        іконка, вектор, svg
+                        контент-іконка, вектор, svg
                     </p>
                     <p>
                         <img src="img/main/services/04.svg" alt="Icon" />
-                        іконка, вектор, svg
+                        контент-іконка, вектор, svg
                     </p>
                     <p>
                         <img src="img/main/services/05.svg" alt="Icon" />
-                        іконка, вектор, svg
+                        контент-іконка, вектор, svg
                     </p>
 
                     <p>
