--- a/lesson_11/index.html
+++ b/lesson_11/index.html
@@ -4,17 +4,298 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="css/style.css" />
+        <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
         <title>lesson 11</title>
     </head>
     <body>
         <div class="wraper">
             <header class="header">
                 <div class="header__container">
-                    
+                    <div class="header__body">
+                        <a href="#" class="header__logo logo">
+                            <img src="img/header/logo.svg" alt="Logo" />
+                        </a>
+                        <div class="header__menu menu">
+                            <ul class="menu__list">
+                                <li class="menu__item">
+                                    <a class="menu__link" href="#">Shop</a>
+                                </li>
+                                <li class="menu__item">
+                                    <a class="menu__link" href="#">Men</a>
+                                </li>
+                                <li class="menu__item">
+                                    <a class="menu__link" href="#">Women</a>
+                                </li>
+                                <li class="menu__item">
+                                    <a class="menu__link" href="#">Combos</a>
+                                </li>
+                                <li class="menu__item">
+                                    <a class="menu__link" href="#">Joggers</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="header__search search">
+                            <span class="search__icon"></span>
+                            <input
+                                class="search__input"
+                                type="text"
+                                placeholder="Search" />
+                        </div>
+                        <div class="header__social social">
+                            <div class="social__item">
+                                <a
+                                    href="#"
+                                    class="social__link"
+                                    target="_blanck">
+                                    <img
+                                        src="img/header/icons/like.svg"
+                                        alt="Like" />
+                                </a>
+                            </div>
+                            <div class="social__item">
+                                <a
+                                    href="#"
+                                    class="social__link"
+                                    target="_blanck">
+                                    <img
+                                        src="img/header/icons/office.svg"
+                                        alt="Office" />
+                                </a>
+                            </div>
+                            <div class="social__item">
+                                <a
+                                    href="#"
+                                    class="social__link"
+                                    target="_blanck">
+                                    <img
+                                        src="img/header/icons/cart.svg"
+                                        alt="Cart" />
+                                </a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </header>
             <main class="main"></main>
-            <footer class="footer"></footer>
+            <footer class="footer">
+                <div class="footer__container">
+                    <div class="footer__content">
+                        <div class="footer__body">
+                            <div class="footer__menu menu-footer">
+                                <div open class="menu-footer__block">
+                                    <summary class="menu-footer__title">
+                                        Need Help
+                                    </summary>
+                                    <ul class="menu-footer__list">
+                                        <li class="menu-footer__item">
+                                            <a
+                                                href="#"
+                                                class="menu-footer__link">
+                                                Contact Us
+                                            </a>
+                                        </li>
+                                        <li class="menu-footer__item">
+                                            <a
+                                                href="#"
+                                                class="menu-footer__link">
+                                                Track Order
+                                            </a>
+                                        </li>
+                                        <li class="menu-footer__item">
+                                            <a
+                                                href="#"
+                                                class="menu-footer__link">
+                                                Returns & Refunds
+                                            </a>
+                                        </li>
+                                        <li class="menu-footer__item">
+                                            <a
+                                                href="#"
+                                                class="menu-footer__link">
+                                                FAQ's
+                                            </a>
+                                        </li>
+                                        <li class="menu-footer__item">
+                                            <a
+                                                href="#"
+                                                class="menu-footer__link">
+                                                Career
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div open class="menu-footer__block">
+                                    <summary class="menu-footer__title">
+                                        Company
+                                    </summary>
+                                    <ul class="menu-footer__list">
+                                        <li class="menu-footer__item">
+                                            <a
+                                                href="#"
+                                                class="menu-footer__link">
+                                                About Us
+                                            </a>
+                                        </li>
+                                        <li class="menu-footer__item">
+                                            <a
+                                                href="#"
+                                                class="menu-footer__link">
+                                                Euphoria Blog
+                                            </a>
+                                        </li>
+                                        <li class="menu-footer__item">
+                                            <a
+                                                href="#"
+                                                class="menu-footer__link">
+                                                Euphoriastan
+                                            </a>
+                                        </li>
+                                        <li class="menu-footer__item">
+                                            <a
+                                                href="#"
+                                                class="menu-footer__link">
+                                                Collaboration
+                                            </a>
+                                        </li>
+                                        <li class="menu-footer__item">
+                                            <a
+                                                href="#"
+                                                class="menu-footer__link">
+                                                Media
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div open class="menu-footer__block">
+                                    <summary class="menu-footer__title">
+                                        More Info
+                                    </summary>
+                                    <ul class="menu-footer__list">
+                                        <li class="menu-footer__item">
+                                            <a
+                                                href="#"
+                                                class="menu-footer__link">
+                                                Term and Conditions
+                                            </a>
+                                        </li>
+                                        <li class="menu-footer__item">
+                                            <a
+                                                href="#"
+                                                class="menu-footer__link">
+                                                Privacy Policy
+                                            </a>
+                                        </li>
+                                        <li class="menu-footer__item">
+                                            <a
+                                                href="#"
+                                                class="menu-footer__link">
+                                                Shipping Policy
+                                            </a>
+                                        </li>
+                                        <li class="menu-footer__item">
+                                            <a
+                                                href="#"
+                                                class="menu-footer__link">
+                                                Sitemap
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div open class="menu-footer__block">
+                                    <summary class="menu-footer__title">
+                                        Location
+                                    </summary>
+                                    <ul class="menu-footer__list">
+                                        <li class="menu-footer__item">
+                                            <a
+                                                href="#"
+                                                class="menu-footer__link">
+                                                support@euphoria.in
+                                            </a>
+                                        </li>
+                                        <li class="menu-footer__item">
+                                            <a
+                                                href="#"
+                                                class="menu-footer__link">
+                                                Eklingpura Chouraha, Ahmedabad
+                                                Main Road
+                                            </a>
+                                        </li>
+                                        <li class="menu-footer__item">
+                                            <a
+                                                href="#"
+                                                class="menu-footer__link">
+                                                (NH 8- Near Mahadev Hotel)
+                                                Udaipur, India- 313002
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="footer__info info-footer">
+                                <h2 class="info-footer__title">
+                                    Download The App
+                                </h2>
+                                <ul class="info-footer__social social">
+                                    <li class="social__item">
+                                        <a href="#">
+                                            <img
+                                                src="img/footer/icons/fb.svg"
+                                                alt="Facebook" />
+                                        </a>
+                                    </li>
+                                    <li class="social__item">
+                                        <a href="#">
+                                            <img
+                                                src="img/footer/icons/instagram.svg"
+                                                alt="Instagram" />
+                                        </a>
+                                    </li>
+                                    <li class="social__item">
+                                        <a href="#">
+                                            <img
+                                                src="img/footer/icons/x.svg"
+                                                alt="X" />
+                                        </a>
+                                    </li>
+                                    <li class="social__item">
+                                        <a href="#">
+                                            <img
+                                                src="img/footer/icons/in.svg"
+                                                alt="LinkedIn" />
+                                        </a>
+                                    </li>
+                                </ul>
+                                <div class="info-footer__btn btn-app">
+                                    <div class="btn-app__google">
+                                        <a href="#">
+                                            <img
+                                                src="img/footer/icons/btn-google.svg"
+                                                alt="Button Google Play" />
+                                        </a>
+                                    </div>
+                                    <div class="btn-app__store">
+                                        <a href="#">
+                                            <img
+                                                src="img/footer/icons/btn-store.svg"
+                                                alt="Button App Store" />
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="footer__categories categories-footer">
+                                <div class="categories-footer__body">
+                                    Popular Categories
+                                </div>
+                            </div>
+                            <div class="footer__copyright">
+                                Copyright © 2023 Euphoria Folks Pvt Ltd. All
+                                rights reserved.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </footer>
         </div>
     </body>
 </html>
