--- a/lesson_11/index.html
+++ b/lesson_11/index.html
@@ -18,19 +18,19 @@
                         <div class="header__menu menu">
                             <ul class="menu__list">
                                 <li class="menu__item">
-                                    <a class="menu__link" href="#">Shop</a>
+                                    <a href="#" class="menu__link">Shop</a>
                                 </li>
                                 <li class="menu__item">
-                                    <a class="menu__link" href="#">Men</a>
+                                    <a href="#" class="menu__link">Men</a>
                                 </li>
                                 <li class="menu__item">
-                                    <a class="menu__link" href="#">Women</a>
+                                    <a href="#" class="menu__link">Women</a>
                                 </li>
                                 <li class="menu__item">
-                                    <a class="menu__link" href="#">Combos</a>
+                                    <a href="#" class="menu__link">Combos</a>
                                 </li>
                                 <li class="menu__item">
-                                    <a class="menu__link" href="#">Joggers</a>
+                                    <a href="#" class="menu__link">Joggers</a>
                                 </li>
                             </ul>
                         </div>
@@ -46,7 +46,7 @@
                                 <a
                                     href="#"
                                     class="social__link"
-                                    target="_blanck">
+                                    target="_blank">
                                     <img
                                         src="img/header/icons/like.svg"
                                         alt="Like" />
@@ -56,7 +56,7 @@
                                 <a
                                     href="#"
                                     class="social__link"
-                                    target="_blanck">
+                                    target="_blank">
                                     <img
                                         src="img/header/icons/office.svg"
                                         alt="Office" />
@@ -66,7 +66,7 @@
                                 <a
                                     href="#"
                                     class="social__link"
-                                    target="_blanck">
+                                    target="_blank">
                                     <img
                                         src="img/header/icons/cart.svg"
                                         alt="Cart" />
@@ -76,7 +76,129 @@
                     </div>
                 </div>
             </header>
-            <main class="main"></main>
+            <main class="main">
+                <div class="main__container">
+                    <div class="layout">
+                        <div class="product__about about">
+                            <div class="about__left left-about">
+                                <div class="left-about__slider slider">
+                                    <div class="slider__sidebar">
+                                        <a class="slider__link" href="#">
+                                            <img
+                                                src="img/main/about/slider/image-1.webp"
+                                                alt="image" />
+                                        </a>
+                                        <a class="slider__link" href="#">
+                                            <img
+                                                src="img/main/about/slider/image-2.webp"
+                                                alt="image" />
+                                        </a>
+                                        <a class="slider__link" href="#">
+                                            <img
+                                                src="img/main/about/slider/image-3.webp"
+                                                alt="image" />
+                                        </a>
+                                    </div>
+                                    <div class="slider__control">
+                                        <button
+                                            class="slider__control slider__control--prev"></button>
+                                        <button
+                                            class="slider__control slider__control--next"></button>
+                                    </div>
+                                </div>
+                                <div class="left-about__image">
+                                    <a href="#" class="left-about__link">
+                                        <img
+                                            src="img/main/about/sweater_1x.webp"
+                                            srcset="img/main/about/sweater_1x.webp x1, img/main/about/sweater_2x.webp x2"
+                                            alt="Sweater" />
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="about__right right-about">
+                                <div class="right-about__navbar navbar">
+                                    <ul class="navbar__list">
+                                        <li class="navbar__item">Shop</li>
+                                        <li class="navbar__item">Women</li>
+                                        <li class="navbar__item">Top</li>
+                                    </ul>
+                                </div>
+                                <h1 class="right-about__title">
+                                    Raven Hoodie With Black colored Design
+                                </h1>
+                                <div class="right-about__feedback feedback">
+                                    <ul class="feedback__list">
+                                        <li class="feedback__item">
+                                            <a href="#" class="feedback__link">
+                                                <img
+                                                    src="img/main/icons/star.svg"
+                                                    alt="Star" />
+                                            </a>
+                                        </li>
+                                        <li class="feedback__item">
+                                            <a href="#" class="feedback__link">
+                                                <img
+                                                    src="img/main/icons/star.svg"
+                                                    alt="Star" />
+                                            </a>
+                                        </li>
+                                        <li class="feedback__item">
+                                            <a href="#" class="feedback__link">
+                                                <img
+                                                    src="img/main/icons/star.svg"
+                                                    alt="Star" />
+                                            </a>
+                                        </li>
+                                        <li class="feedback__item">
+                                            <a href="#" class="feedback__link">
+                                                <img
+                                                    src="img/main/icons/star.svg"
+                                                    alt="Star" />
+                                            </a>
+                                        </li>
+                                        <li class="feedback__item">
+                                            <a href="#" class="feedback__link">
+                                                <img
+                                                    src="img/main/icons/star.svg"
+                                                    alt="Star" />
+                                            </a>
+                                        </li>
+                                    </ul>
+                                    <span class="feedback__review">3.5</span>
+                                    <div class="feedback__comments comments">
+                                        <a href="" class="comments__link">
+                                            <img src="img/main/icons/message/icon.svg" alt="Icon">
+                                            120 comment
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="right-about__size size">
+                                    <a href="#" class="size__select">Select Size</a>
+                                    <a href="#" class="size__guide">Size Guide</a>
+                                    <ul class="size__list">
+                                        <li class="size__item">XS</li>
+                                        <li class="size__item">S</li>
+                                        <li class="size__item">M</li>
+                                        <li class="size__item">L</li>
+                                        <li class="size__item">XL</li>
+                                    </ul>
+                                </div>
+                                <div class="right-about__color color">
+                                    <h4 class="color__title">Colours Available</h4>
+                                    <ul class="color__list">
+                                        <li class="color__item color__item--first"></li>
+                                        <li class="color__item color__item--second"></li>
+                                        <li class="color__item color__item--third"></li>
+                                        <li class="color__item color__item--fourth"></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="about__description description"></div>
+                        <div class="about__similar similar"></div>
+                    </div>
+                </div>
+            </main>
             <footer class="footer">
                 <div class="footer__container">
                     <div class="footer__content">
